--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
 				</div>
 				<div class="content-about-text-data">
 					<p class="text">			
-						Уважаемые посетители, бассейн закрыт на летний период. Запись в группу осуществляется с 27 августа 
-						по адресу Мельничная 4. Начало занятий с 4 сентября. Более подробную информацию о стоимости и расписании
-						отслеживайте на сайте с 24 августа.
+						Уважаемые посетители, обновленную информацию о ценах и расписании<br>
+						на текущий период можно посмотреть в соответствующих разделах.<br><br>
+						Запись проводится:<br>
+						27 - 31 августа с 14.00 - 20.00<br>
+						1 сентября с 10.00 - 16.00<br>
+						Начало занятий с 4 сентября.<br>
 					</p>
 				</div>
 		</div>
