--- a/schedule.html
+++ b/schedule.html
@@ -134,7 +134,7 @@
 <p>Котомцева Д.В.</p>
 </td>
 <td style="width:136px">
-<p>15.40-16.40</p>
+<p>15.30-16.30</p>
 </td>
 <td style="width:172px">
 <p>Котомцева Д.В.</p>
@@ -182,7 +182,7 @@
 <p>Котомцева Д.В.</p>
 </td>
 <td style="width:136px">
-<p>15.40-16.40</p>
+<p>15.30-16.30</p>
 </td>
 <td style="width:172px">
 <p>Котомцева Д.В.</p>
@@ -351,16 +351,15 @@
 <p><strong><em>Место проведения</em></strong></p>
 </td>
 <td style="width:256px">
-<p><strong><em>тренр</em></strong></p>
+<p><strong><em>тренер</em></strong></p>
 </td>
 </tr>
 <tr>
 <td style="width:165px">
-<p><strong>Понедельник</strong></p>
+<p><strong>Вторник</strong></p>
 </td>
 <td style="width:146px">
-<p>15.30-16.30/</p>
-<p>16.30-17.30</p>
+<p>9.00-10.00</p>
 </td>
 <td style="width:200px">
 <p>спортзал/</p>
@@ -375,8 +374,7 @@
 <p><strong>Среда</strong></p>
 </td>
 <td style="width:146px">
-<p>15.30-16.30/</p>
-<p>16.30-17.30</p>
+<p>16.00-17.00</p>
 </td>
 <td style="width:200px">
 <p>спортзал/</p>
@@ -388,88 +386,45 @@
 </tr>
 <tr>
 <td style="width:165px">
-<p><strong>Воскресенье</strong></p>
+<p><strong>Четверг</strong></p>
 </td>
 <td style="width:146px">
-<p> 9.30 -10.30/</p>
-<p>10.30- 11.30</p>
+<p>9.00-10.00</p>
+<p>18.00-19.00</p>
 </td>
 <td style="width:200px">
 <p>спортзал/</p>
 <p>бассейн</p>
 </td>
 <td style="width:256px">
+<p>Мухин Е.М</p>
+</td>
+</tr>
+<tr>
+<td rowspan="2" style="width:165px">
+<p><strong>Воскресенье</strong></p>
+</td>
+<td style="width:146px">
+<p>9.30-10.30</p>
+</td>
+<td style="width:200px">
+<p>спортзал</p>
+</td>
+<td rowspan="2" style="width:256px">
 <p>Мухин Е.М.</p>
+</td>
+</tr>
+<tr>
+<td style="width:146px">
+<p>10.30-11.30</p>
+</td>
+<td style="width:200px">
+<p>бассейн</p>
 </td>
 </tr>
 </tbody>
 </table>
 <ol start="5">
-<li><strong>Группы &laquo;Семейного плавания&raquo; (оздоровительное плавание)</strong></li>
-</ol>
-<p></p>
-<table>
-<tbody>
-<tr>
-<td style="width:256px">
-<p><strong><em>День недели</em></strong></p>
-</td>
-<td style="width:256px">
-<p><strong><em>Время</em></strong></p>
-</td>
-<td style="width:256px">
-<p><strong><em>Инструктор</em></strong></p>
-</td>
-</tr>
-<tr>
-<td style="width:256px">
-<p><strong>Вторник </strong></p>
-</td>
-<td style="width:256px">
-<p>18.00-19.00</p>
-</td>
-<td style="width:256px">
-<p>Криницкая Т.А</p>
-</td>
-</tr>
-<tr>
-<td style="width:256px">
-<p><strong>Пятница</strong></p>
-</td>
-<td style="width:256px">
-<p>18.00-19.00</p>
-</td>
-<td style="width:256px">
-<p>Криницкая Т.А</p>
-</td>
-</tr>
-<tr>
-<td style="width:256px">
-<p><strong>Суббота</strong></p>
-</td>
-<td style="width:256px">
-<p>17.00-18.00</p>
-</td>
-<td style="width:256px">
-<p>Криницкая Т.А</p>
-</td>
-</tr>
-<tr>
-<td style="width:256px">
-<p><strong>Воскресенье</strong></p>
-</td>
-<td style="width:256px">
-<p>18.00-19.00</p>
-</td>
-<td style="width:256px">
-<p>Котомцева Д.В.</p>
-</td>
-</tr>
-</tbody>
-</table>
-<p></p>
-<p></p>
-<ol start="6">
 <li><strong>Группы &laquo;Аква-аэробики&raquo; (фитнес-программы для взрослых старше 18 лет) </strong></li>
 </ol>
 <table>
@@ -520,13 +475,60 @@
 </tr>
 <tr>
 <td style="width:256px">
-<p><strong>Суббота</strong></p>
+<p><strong>Суббота (с октября)</strong></p>
 </td>
 <td style="width:256px">
 <p>10.30-12.00</p>
 </td>
 <td style="width:256px">
 <p>Криницкая Т.А.</p>
+</td>
+</tr>
+</tbody>
+</table>
+<ol start="6">
+<li><strong>Семейное (свободное) плавание</strong></li>
+</ol>
+<table>
+<tbody>
+<tr>
+<td style="width:256px">
+<p><strong><em>День недели</em></strong></p>
+</td>
+<td style="width:256px">
+<p><strong><em>Время</em></strong></p>
+</td>
+</tr>
+<tr>
+<td style="width:256px">
+<p><strong>Вторник</strong></p>
+</td>
+<td style="width:256px">
+<p>18.00-19.00</p>
+</td>
+</tr>
+<tr>
+<td style="width:256px">
+<p><strong>Пятница</strong></p>
+</td>
+<td style="width:256px">
+<p>18.00-19.00</p>
+</td>
+</tr>
+<tr>
+<td style="width:256px">
+<p><strong>Суббота</strong></p>
+</td>
+<td style="width:256px">
+<p>17.00-18.00</p>
+</td>
+</tr>
+<tr>
+<td style="width:256px">
+<p><strong>Воскресенье (с октября)</strong></p>
+</td>
+<td style="width:256px">
+<p>18.00-19.00</p>
 </td>
 </tr>
 </tbody>
