--- a/pricelist.html
+++ b/pricelist.html
@@ -105,13 +105,13 @@
 						<p>Спортивно-оздоровительное плавание для детей от 5 лет</p>
 					</td>
 					<td>
-						<p>академ. час</p>
+						<p>1 академ. час</p>
 					</td>
 					<td>
 						<p>8</p>
 					</td>
 					<td>
-						<p>800,00</p>
+						<p>960,00</p>
 					</td>
 					<td>
 						<p>-</p>
@@ -131,13 +131,13 @@
 						<p>1</p>
 					</td>
 					<td>
-						<p>100,00</p>
+						<p>150,00</p>
 					</td>
 					<td>
 						<p>1</p>
 					</td>
 					<td>
-						<p>230,00</p>
+						<p>250,00</p>
 					</td>
 				</tr>
 				<tr>
@@ -145,13 +145,13 @@
 						<p>4</p>
 					</td>
 					<td>
-						<p>400,00</p>
+						<p>480,00</p>
 					</td>
 					<td>
 						<p>4</p>
 					</td>
 					<td>
-						<p>700,00</p>
+						<p>800,00</p>
 					</td>
 				</tr>
 				<tr>
@@ -213,27 +213,32 @@
 						<p>4</p>
 					</td>
 					<td>
-						<p>900,00</p>
+						<p>1 000,00</p>
 					</td>
 				</tr>
 				<tr>
-					<td style="background-color:#f6fafd">
-						<p>Спортивно-оздоровительная секция для детей по водному поло&raquo;</p>
+					<td rowspan="2" style="background-color:#f6fafd">
+						<p>Спортивно-оздоровительная секция для детей по водному поло</p>
 					</td>
+					<td>
+						<p>1 академ. час</p>
+					</td>
+					<td rowspan="2">
+						<p>8</p>
+					</td>
+					<td rowspan="2">
+						<p>2 560</p>
+					</td>
+					<td rowspan="2">
+						<p>-</p>
+					</td>
+					<td rowspan="2">
+						<p>-</p>
+					</td>
+				</tr>
+				<tr>
 					<td>
 						<p>2 академ. часа</p>
-					</td>
-					<td>
-						<p>12</p>
-					</td>
-					<td>
-						<p>2160</p>
-					</td>
-					<td>
-						<p>-</p>
-					</td>
-					<td>
-						<p>-</p>
 					</td>
 				</tr>
 				<tr>
@@ -253,7 +258,7 @@
 						<p>1</p>
 					</td>
 					<td>
-						<p>4 000,00</p>
+						<p>4 500,00</p>
 					</td>
 				</tr>
 				<tr>
@@ -261,7 +266,7 @@
 						<p>4</p>
 					</td>
 					<td>
-						<p>16 000,00</p>
+						<p>18 000,00</p>
 					</td>
 				</tr>
 				<tr>
@@ -290,6 +295,28 @@
 					</td>
 					<td>
 						<p>24 000,00</p>
+					</td>
+				</tr>
+				<tr>
+					<td style="background-color:#f6fafd">
+						<p>Коллективное посещение оздоровительных тренировок в спортивном зале по игровым видам спорта (волейбол, баскетбол, мини-футбол),
+						для организаций, предприятий.
+						</p>
+					</td>
+					<td>
+						<p>1 час</p>
+					</td>
+					<td>
+						<p>-</p>
+					</td>
+					<td>
+						<p>-</p>
+					</td>
+					<td>
+						<p>1</p>
+					</td>
+					<td>
+						<p>1 000,0</p>
 					</td>
 				</tr>
 				<tr>
