rename section manual to information

--- a/info_int.html
+++ b/info_int.html
@@ -40,7 +40,7 @@
 		<a href="index.html" class="menu-but">Главная</a>
 		<a href="schedule.html" class="menu-but">Расписание</a>
 		<a href="pricelist.html" class="menu-but">Цены</a>
-		<a href="info_rules.html" class="menu-but">Справочник</a>
+		<a href="info_rules.html" class="menu-but">Информация</a>
 		<!--<a href="corp.html" class="menu-but">Корпоративным клиентам</a>!-->
 		<a href="gallery.html" class="menu-but">Галерея</a>
 		<div class="menu-share">
