upd info block and rules

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 				<div class="content-about-text-data">
 					<p class="text">			
 						Уважаемые посетители, обновленную информацию о ценах и расписании<br>
-						на текущий период можно посмотреть в соответствующих разделах.<br><br>
+						на текущий период можно посмотреть в соответствующих разделах.<br>
+						Необходимые условия для записи описаны в разделе "Информация".<br><br>
 						Запись проводится:<br>
 						27 - 31 августа с 14.00 - 20.00<br>
 						1 сентября с 10.00 - 16.00<br>
