--- a/info_rules.html
+++ b/info_rules.html
@@ -72,6 +72,14 @@
 				</div>
 				<div class="content-about-text-data data-format">
 					<p class="text">
+						<b>Информация для записи в группу</b><br>
+						-На все виды платных физкультурно-оздоровительных услуг бассейна
+						с каждым посетителем заключается договор на основании
+						данных его паспорта (Образец договора можно скачать на сайте). <br>
+						-Заключить договор на посещение детских групп может только
+						законный представитель несовершеннолетнего ребенка.<br>
+						-Договора без справок с медицинским заключением на регистрацию
+						(запись в группы) не принимаются.<br><br>
 						<b>Требования медицинского контроля</b><br>
 						Вне зависимости от санитарно-эпидемической ситуации:<br>
 						-<b>взрослым</b> необходимо предоставить письменное разрешение (справку)
@@ -79,7 +87,7 @@
 						-<b>детям дошкольного и школьного возраста</b> в обязательном порядке требуется справка о результатах паразитологического обследования на энтеробиоз:<br>
 						- при постоянном посещении плавательного бассейна не менее 1 раза в 3 месяца;<br>
 						- при разовых посещениях - перед каждым посещением, если разрыв между ними более 2 месяцев.<br>
-						Контроль над наличием медицинской справки у посетителей обеспечивает администрация бассейна.<br><br>
+						Контроль над наличием медицинской справки у посетителей обеспечивает администрация бассейна.<br>
 						<b>При посещении бассейна необходимо при себе иметь:</b><br>
 						• чистую сменную обувь (резиновые сланцы)<br>
 						• мочалку (губку)<br>
