--- a/index.html
+++ b/index.html
@@ -61,13 +61,17 @@
 				</div>
 				<div class="content-about-text-data">
 					<p class="text">			
-						Уважаемые посетители, обновленную информацию о ценах и расписании<br>
-						на текущий период можно посмотреть в соответствующих разделах.<br>
-						Необходимые условия для записи описаны в разделе "Информация".<br><br>
-						Запись проводится:<br>
-						27 - 31 августа с 14.00 - 20.00<br>
-						1 сентября с 10.00 - 16.00<br>
-						Начало занятий с 4 сентября.<br>
+						Уважаемые посетители<br>
+						Обращаем ваше внимание на изменение в расписании<br>
+						группы семейного плавания (свободное посещение) суббота 18.00 до 19.00<br>
+						Изменения вступят в силу с октября 2018.<br>
+						Также объявляется дополнительный набор детей начальных классов в детские спортивно-оздоровительные группы по плаванию.<br> 
+						дополнительные места: Среда, Пятница 18.00.-19.00 и 19.10 - 20.10.<br>
+						Количество мест ограничено.<br><br>
+						Запись проводится ежедневно:<br>
+						Понедельник    с 14.30 до 18.00<br>
+						Втор.-Пятница  с 10.00 до 19.00<br>
+						Суббота-Воскр. с 10.00 до 18.00<br>
 					</p>
 				</div>
 		</div>
