--- a/schedule.html
+++ b/schedule.html
@@ -401,6 +401,44 @@
 </td>
 </tr>
 <tr>
+<td rowspan="4" style="width:165px">
+<p><strong>Суббота</strong></p>
+</td>
+<td style="width:146px">
+<p>16.00-17.00</p>
+</td>
+<td style="width:200px">
+<p>спортзал</p>
+</td>
+<td rowspan="4" style="width:256px">
+<p>Мухин Е.М.<br>Котомцева Д.В.</p>
+</td>
+</tr>
+<tr>
+<td style="width:146px">
+<p>17.00-18.00</p>
+</td>
+<td style="width:200px">
+<p>бассейн</p>
+</td>
+</tr>
+<tr>
+<td style="width:146px">
+<p>18.00-19.00</p>
+</td>
+<td style="width:200px">
+<p>спортзал</p>
+</td>
+</tr>
+<tr>
+<td style="width:146px">
+<p>19.00-20.00</p>
+</td>
+<td style="width:200px">
+<p>бассейн</p>
+</td>
+</tr>
+<tr>
 <td rowspan="2" style="width:165px">
 <p><strong>Воскресенье</strong></p>
 </td>
