--- a/new/index.html
+++ b/new/index.html
@@ -36,7 +36,7 @@
 			<div class="share">
 				<!-- uSocial -->
 				<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
-				<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,mail,bookmarks" data-mobile="vi,wa,sms"></div>
+				<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,spoiler" data-mobile="vi,wa,sms"></div>
 				<!-- /uSocial -->
 			</div>
 		</nav>
