--- a/new/index.html
+++ b/new/index.html
@@ -36,12 +36,40 @@
 			<div class="share">
 				<!-- uSocial -->
 				<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
-				<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,spoiler" data-mobile="vi,wa,sms"></div>
+				<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,spoiler"></div>
 				<!-- /uSocial -->
 			</div>
 		</nav>
 		<main>
-			
+			<section class="paper-field">
+				<article class="ads bckg_img" style="background-image: url(../img/ads_empt.png);">
+					<h2>Объявление</h2>
+					<p>
+						Уважаемые посетители,
+						обращаем ваше внимание на изменение в расписании 
+						группы семейного плавания (свободное посещение)<br>суббота 18.00 до 19.00<br>
+						Изменения вступят в силу с октября 2018.<br>
+						Также объявляется дополнительный набор детей начальных классов в детские спортивно-оздоровительные группы по плаванию.<br> 
+						дополнительные места: Среда, Пятница 18.00.-19.00 и 19.10 - 20.10.<br>
+						Количество мест ограничено.<br><br>
+						Запись проводится ежедневно:<br>
+						Понедельник    с 14.30 до 18.00<br>
+						Втор.-Пятница  с 10.00 до 19.00<br>
+						Суббота-Воскр. с 10.00 до 18.00<br>
+					</p>
+				</article>	
+				<article class="main_info bckg_img" style="background-image: url(../img/main_info.png);">
+					<aside>
+						<h2>О нас</h2>
+						<p>
+							Исходя из специфики работы (бассейн школьный), мы строго контролируем качество воды в чашах бассейна и следим за санитарным состоянием спортивного сооружения в целом. 
+							В нашем бассейне используются современные технологии многоступенчатой очистки воды, которые позволяют обходиться применением минимального количества агрессивных химикатов, поэтому в воздухе практически отсутствуют пары хлора. 
+							Температурный режим воды и воздуха поддерживается современной системой автоматики, и в бассейне круглый год оптимальный микроклимат, температура в большой чаше бассейна 28-29&deg;, в малой чаше – 30-31&deg;.
+						</p>
+					</aside>
+					<img src="../img/bass.jpg" alt="Бассейн">
+				</article>
+			</section>
 		</main>
 		<footer>
 		</footer>
