add additional and footer

--- a/new/index.html
+++ b/new/index.html
@@ -70,8 +70,86 @@
 					<img src="../img/bass.jpg" alt="Бассейн">
 				</article>
 			</section>
+			<section class="services">
+				<h3>Мы предлагаем</h3>
+				<article>
+					<img src="../img/serv_aqua.png" alt="Аквааэробика">
+					<p>
+						Аквааэробика<br><br>
+						Групповая тренировка для всех желающих с различным специализированным оборудованием под зажигательную музыку. Эффективные физические упражнения в воде повышают сопротивляемость организма болезням, тренируя сердечно-сосудистую, 
+						дыхательную системы и опорно-двигательный аппарат, помогают снизить вес, улучшить фигуру и поднять эмоционально-жизненный тонус.
+					</p>
+				</article>
+				<article>
+					<img src="../img/serv_training.png" alt="Спортивно-оздоровительное плавание">
+					<p>
+						Спортивно-оздоровительное плавание<br><br>
+						Детские групповые обучающие занятия: от 5 до 11 лет - в малой чаше, для детей среднего и старшего школьного возраста в большой чаше бассейна. Посещая тренировки в течение года ваши дети учатся плавать разными способами, 
+						укрепляя свою нервную систему, сердечно-сосудистый и дыхательный аппарат. Занятия в воде помогут укрепить мышцы и сформировать правильную осанку.
+					</p>
+				</article>
+				<article>
+					<img src="../img/serv_polo.png" alt="Водное поло">
+					<p>
+						Водное поло<br><br>
+						Вид спорта, сочетающий в себе сразу несколько направлений: плавание, волейбол, баскетбол и хоккей. Эта игра способствует также развитию физических качеств, закаливанию организма, помогает воспитывать в себе целеустремленность, 
+						командный дух, волю к победе. Водное поло — замечательный вид спорта для тех, кто хочет хорошо и быстро плавать, а также стать выносливым и ловким.
+					</p>
+				</article>
+				<article>
+					<img src="../img/serv_mac.png" alt="Мать и дитя">
+					<p>
+						"Мать и дитя"<br><br>
+						Групповые занятия предназначены для самых маленьких посетителей. Специализированные занятия  в воде для малышей от 1,5 до 5 лет с мамами или папами под руководством опытного тренера будут не только самыми любимыми для вашего ребенка, 
+						но и  станут хорошей основой в развитии и укреплении здоровья  малыша.
+					</p>
+				</article>
+				<article>
+					<img src="../img/serv_free.png" alt="Свободное плавание">
+					<p>
+						Свободное плавание<br><br>
+						Вы можете просто прийти поплавать и отдохнуть всей семьей. Сауна Вам также доступна. Плавание - это расслабляющий процесс, который зарядит ваше настроение на целый день.
+					</p>
+				</article>
+			</section>
+			<h3>Дополнительные услуги</h3>
+			<section class="paper-field additional">
+				<article>
+					<aside>
+						<h2>Кислородный коктейль</h2>
+						<p>После бассейна наши посетители могут без спешки и очереди воспользоваться
+							стационарными фенами для сушки волос (услуга бесплатная),
+							принять вкусный и освежающий кислородный коктейль из натуральных
+							растительных компонентов: сиропа корня солодки и шиповника.</p>
+					</aside>
+					<img src="../img/kislorodniy-kokteyl.jpg" alt="кислородный коктейль">
+					<img src="../img/kislorodniy-kokteyl2.jpg" alt="кислородный коктейль">
+				</article>
+				<article>
+					<aside>
+						<h2>Тренажерный Зал</h2>
+						<p>В нашем бассейне также присутствует небольшой тренажерный зал.
+							Он укомплектован всеми необходимыми тренажерами
+							и снарядами для занятий.</p>
+					</aside>
+						<img src="../img/trenajernuy_zal.jpg" alt="тренажерный зал">
+						<img src="../img/trenajernuy_zal2.jpg" alt="тренажерный зал">
+				</article>
+				<article>
+					<aside>
+						<h2>Сауна</h2>
+						<p>Посещение сауны входят в основную стоимость абонемента.
+							Сауна находится рядом с большой чашей бассейна.
+							Оборудование сауны позволяет использовать как сухой,
+							так и влажный пар c арома-маслами.</p>
+					</aside>
+						<img src="../img/sauna.jpg" alt="Сауна">
+						<img src="../img/sauna2.jpg" alt="Сауна">
+				</article>
+			</section>
 		</main>
 		<footer>
+			<p>Copyright &copy; 2018 Г. ПБ "Дельфин"</p>
 		</footer>
 	</body>
 </html>
