Add adapt info lists

--- a/info_rules.html
+++ b/info_rules.html
@@ -58,8 +58,8 @@
 				<div class="paper-shadow"> <!--Menu Information!-->
 					<a href="info_rules.html" class="svblock-but">Правила</a>
 					<a href="info_int.html" class="svblock-but">Полезная информация</a>
-					<a href="docs/dl/rules.zip" class="svblock-but">Скачать документы с правилами</a>
-					<a href="docs/dl/contracts.zip" class="svblock-but">Скачать бланки с договорами</a>
+					<a href="../docs/dl/rules.zip" class="svblock-but">Скачать документы с правилами</a>
+					<a href="../docs/dl/contracts.zip" class="svblock-but">Скачать бланки с договорами</a>
 				</div>
 			</div>
 		</div>
