--- a/new/index.html
+++ b/new/index.html
@@ -26,7 +26,7 @@
 				allowfullscreen</iframe>
 			</div>
 		</header>
-		<nav>
+		<nav class="header-nav">
 			<!--flexbox!-->
 			<a href="index.html">Главная</a>
 			<a href="schedule.html">Расписание</a>
