--- a/new/info_int.html
+++ b/new/info_int.html
@@ -55,7 +55,7 @@
 							<b>1.</b> Когда человек плывет — работают практически все его мышцы. Поэтому не нужно тренировать руки, потом ноги, далее пресс, спину, затем грудные и т.д. В процессе плавания, как уже сказано выше работает всё тело. Каждая мышца по сути получает нагрузку именно такую какая необходима, поэтому тело профессиональных пловцов гармонично развито.<br><br>
 							<b>2.</b> Плавание как спорт – является вторым после бега на лыжах спортом, который отлично тренирует практически все группы мышц.<br><br>
 							<b>3.</b> Постояв минуту в воде с температурой +20&deg;, в крови ощутимо повышается уровень гемоглобина. Плавать в холодной воде полезно для выработки гормонов, оно улучшает кровообращение, к тому же замедляет процессы клеточного старения организма.<br><br>
-							<b>4.</b> Интересные факт — плавание помогает снять стресс. Вода будто «смывает» весь негатив, дарит ощущение свежести, невероятной бодрости, заряжает энергией.
+							<b>4.</b> Интересный факт — плавание помогает снять стресс. Вода будто «смывает» весь негатив, дарит ощущение свежести, невероятной бодрости, заряжает энергией.
 						</p>
 					</aside>
 				</article>
