create json: price

--- a/new/price.html
+++ b/new/price.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="table.css">
+		<script src="table.js" type="text/javascript"></script>
 		<title>Бассейн "Дельфин"</title>
 	</head>
 	<body>
@@ -42,22 +44,13 @@
 		</nav>
 		<main>
 			<section class="paper-field">
-				<article class="main_info">
-					<nav class="paper-nav">
-						<a href="info_rules.html">Правила</a>
-						<a href="info_int.html">Полезная информация</a>
-						<a href="../docs/dl/rules.zip">Скачать документы с правилами</a>
-						<a href="../docs/dl/contracts.zip">Скачать бланки с договорами</a>
-					</nav>
-					<aside>
-						<h2 class="info-title">Интересные факты</h2>
-						<p>
-							<b>1.</b> Когда человек плывет — работают практически все его мышцы. Поэтому не нужно тренировать руки, потом ноги, далее пресс, спину, затем грудные и т.д. В процессе плавания, как уже сказано выше работает всё тело. Каждая мышца по сути получает нагрузку именно такую какая необходима, поэтому тело профессиональных пловцов гармонично развито.<br><br>
-							<b>2.</b> Плавание как спорт – является вторым после бега на лыжах спортом, который отлично тренирует практически все группы мышц.<br><br>
-							<b>3.</b> Постояв минуту в воде с температурой +20&deg;, в крови ощутимо повышается уровень гемоглобина. Плавать в холодной воде полезно для выработки гормонов, оно улучшает кровообращение, к тому же замедляет процессы клеточного старения организма.<br><br>
-							<b>4.</b> Интересный факт — плавание помогает снять стресс. Вода будто «смывает» весь негатив, дарит ощущение свежести, невероятной бодрости, заряжает энергией.
-						</p>
-					</aside>
+				<article class="f-table">
+					<h2>ПРЕЙСКУРАНТ ЦЕН<br>на платные дополнительные физкультурно-оздоровительные услуги бассейна школы " ДЕЛЬФИН"</h2>
+					<figcaption>
+							<figure>
+								
+							</figure>
+					</figcaption>
 				</article>
 			</section>
 		</main>
