--- a/new/pricelist.html
+++ b/new/pricelist.html
@@ -44,13 +44,18 @@
 		</nav>
 		<main>
 			<section class="paper-field">
-				<article class="f-table">
-					<h2>ПРЕЙСКУРАНТ ЦЕН<br>на платные дополнительные физкультурно-оздоровительные услуги бассейна школы " ДЕЛЬФИН"</h2>
-					<figcaption>
-							<figure>
-								
-							</figure>
-					</figcaption>
+				<article class="main_info">
+					<nav class="paper-nav">
+						<a href="info_rules.html">Правила</a>
+						<a href="info_int.html">Полезная информация</a>
+						<a href="../docs/dl/rules.zip">Скачать документы с правилами</a>
+						<a href="../docs/dl/contracts.zip">Скачать бланки с договорами</a>
+					</nav>
+					<aside>
+						<h2 class="info-title">ПРЕЙСКУРАНТ ЦЕН<br>на платные дополнительные физкультурно-оздоровительные услуги бассейна школы " ДЕЛЬФИН"</h2>
+						<p>
+						</p>
+					</aside>
 				</article>
 			</section>
 		</main>
