--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
 				</div>
 				<div class="content-about-text-data">
 					<p class="text">			
-						Уважаемые посетители<br>
-						Обращаем ваше внимание на изменение в расписании<br>
-						группы семейного плавания (свободное посещение) суббота 18.00 до 19.00<br>
-						Изменения вступят в силу с октября 2018.<br>
-						Также объявляется дополнительный набор детей начальных классов в детские спортивно-оздоровительные группы по плаванию.<br> 
-						дополнительные места: Среда, Пятница 18.00.-19.00 и 19.10 - 20.10.<br>
-						Количество мест ограничено.<br><br>
-						Запись проводится ежедневно:<br>
-						Понедельник    с 14.30 до 18.00<br>
-						Втор.-Пятница  с 10.00 до 19.00<br>
-						Суббота-Воскр. с 10.00 до 18.00<br>
+						Уважаемые
+						посетители!<br>
+						С 29 декабря по 7 января
+						занятия в бассейне не
+						проводятся!<br>
+						Все группы начинают свою
+						работу<br>
+						с 8 января по
+						утвержденному расписанию.<br>
+						С Новым годом и
+						Рождеством!!!<br>
 					</p>
 				</div>
 		</div>
