--- a/new/index.html
+++ b/new/index.html
@@ -46,17 +46,16 @@
 				<article class="ads bckg_img" style="background-image: url(../img/ads_empt.png);">
 					<h2>Объявление</h2>
 					<p>
-						Уважаемые посетители,
-						обращаем ваше внимание на изменение в расписании 
-						группы семейного плавания (свободное посещение)<br>суббота 18.00 до 19.00<br>
-						Изменения вступят в силу с октября 2018.<br>
-						Также объявляется дополнительный набор детей начальных классов в детские спортивно-оздоровительные группы по плаванию.<br> 
-						дополнительные места: Среда, Пятница 18.00.-19.00 и 19.10 - 20.10.<br>
-						Количество мест ограничено.<br><br>
-						Запись проводится ежедневно:<br>
-						Понедельник    с 14.30 до 18.00<br>
-						Втор.-Пятница  с 10.00 до 19.00<br>
-						Суббота-Воскр. с 10.00 до 18.00<br>
+						Уважаемые
+						посетители!<br>
+						С 29 декабря по 7 января
+						занятия в бассейне не
+						проводятся!<br>
+						Все группы начинают свою
+						работу с 8 января по
+						утвержденному расписанию.<br>
+						С Новым годом и
+						Рождеством!!!<br>
 					</p>
 				</article>	
 				<article class="main_info bckg_img" style="background-image: url(../img/main_info.png);">
