change main photo

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					</p>
 				</div>
 			</div>
-			<img src="img/bass.jpg" height="335" width="445" style="float: right; padding-right: 48px" alt="Бассейн">
+			<img src="new/site/main_photo.jpg" height="335" width="445" style="float: right; padding-right: 48px" alt="Бассейн">
 		</div>
 		<div class="content-service-title"><p class="font-content-title">Мы предлагаем</p></div>
 		<div class="content-service">
