--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,12 @@
 					<div class="content-dwlblock">
 						<a href="photo/sauna.jpg"><img src="photo/sauna.jpg" style="height: 100%; width: 100%" alt="сауна"></a>
 					</div>
-					
+					<div class="content-dwlblock">
+						<a href="new\gallery\0.jpg"><img src="new\gallery\t_0.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\0.jpg"><img src="new\gallery\t_0.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>	
 				</div>
 			</div>
 		</div>
