--- a/new/index.html
+++ b/new/index.html
@@ -67,7 +67,7 @@
 							Температурный режим воды и воздуха поддерживается современной системой автоматики, и в бассейне круглый год оптимальный микроклимат, температура в большой чаше бассейна 28-29&deg;, в малой чаше – 30-31&deg;.
 						</p>
 					</aside>
-					<img src="../img/bass.jpg" alt="Бассейн">
+					<img src="site/main_photo.jpg" alt="Бассейн">
 				</article>
 			</section>
 			<section class="services">
