--- a/new/info_int.html
+++ b/new/info_int.html
@@ -22,8 +22,9 @@
 				Почта: <a href="mailto:aquafitness@bk.ru">aquafitness@bk.ru</a><span>
 			</div>
 			<div class="map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.252985155408!2d73.32307758051876!3d54.93357968623823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43ab03b2cb37d0cb%3A0x899bb25319c3b143!2z0YPQuy4g0JzQtdC70YzQvdC40YfQvdCw0Y8sIDQsINCe0LzRgdC6LCDQntC80YHQutCw0Y8g0L7QsdC7LiwgNjQ0MDgy!5e0!3m2!1sru!2sru!4v1517129719564">
-				allowfullscreen</iframe>
+				<a href="https://2gis.ru/omsk/firm/282003257688243%2C73.324095%2C54.93391?queryState=center%2F73.32549%2C54.93351%2Fzoom%2F17">
+					<div></div>
+				</a>
 			</div>
 		</header>
 		<nav class="header-nav">
