change service sauna and fitness photos

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 							Он укомплектован всеми необходимыми тренажерами<br>
 							и снарядами для занятий.<br>
 						</p>
-						<img src="img/trenajernuy_zal.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="тренажерный зал">
-						<img src="img/trenajernuy_zal2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="тренажерный зал">
+						<img src="new/gallery/13.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="тренажерный зал">
+						<img src="new/gallery/15.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="тренажерный зал">
 					</div>
 				</div>
 			</div>
@@ -204,7 +204,7 @@
 							так и влажный пар c арома-маслами.<br>
 						</p>
 						<img src="img/sauna.jpg" width="280" height="200" style="margin-top: 18px; float: left;" alt="Сауна">
-						<img src="img/sauna2.jpg" width="300" height="200" style="margin-top: 18px; margin-left: 18px;" alt="Сауна">
+						<img src="new/gallery/7.jpg" width="300" height="200" style="margin-top: 18px; margin-left: 18px;" alt="Сауна">
 					</div>
 				</div>
 			</div>
