--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
 			<!-- /uSocial -->
 		</div>
 	</div>
-	<div class="content" style="width: 100%; height: 100vh;">
+	<div class="content" style="width: 100%; height: 1750px;">
 				<div class="up_line block-top-shadow"></div>
 			<div class="paper-shadow">
 				<div class="content-about-text-title">
@@ -73,7 +73,55 @@
 						<a href="new\gallery\0.jpg"><img src="new\gallery\t_0.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
 					</div>
 					<div class="content-dwlblock">
-						<a href="new\gallery\0.jpg"><img src="new\gallery\t_0.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+						<a href="new\gallery\1.jpg"><img src="new\gallery\t_1.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\2.jpg"><img src="new\gallery\t_2.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\3.jpg"><img src="new\gallery\t_3.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\4.jpg"><img src="new\gallery\t_4.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\5.jpg"><img src="new\gallery\t_5.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\6.jpg"><img src="new\gallery\t_6.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\7.jpg"><img src="new\gallery\t_7.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\8.jpg"><img src="new\gallery\t_8.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\9.jpg"><img src="new\gallery\t_9.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\10.jpg"><img src="new\gallery\t_10.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\11.jpg"><img src="new\gallery\t_11.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\12.jpg"><img src="new\gallery\t_12.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\13.jpg"><img src="new\gallery\t_13.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\14.jpg"><img src="new\gallery\t_14.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\15.jpg"><img src="new\gallery\t_15.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\16.jpg"><img src="new\gallery\t_16.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
+					</div>
+					<div class="content-dwlblock">
+						<a href="new\gallery\17.jpg"><img src="new\gallery\t_17.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
 					</div>	
 				</div>
 			</div>
