--- a/index.html
+++ b/index.html
@@ -63,15 +63,10 @@
 					<p class="text">			
 						Уважаемые
 						посетители!<br>
-						С 29 декабря по 7 января
-						занятия в бассейне не
-						проводятся!<br>
-						Все группы начинают свою
-						работу<br>
-						с 8 января по
-						утвержденному расписанию.<br>
-						С Новым годом и
-						Рождеством!!!<br>
+						23 февраля для бассейна - рабочий день.<br>
+						На период 7 и 8 марта бассейн работать не будет.<br>
+						С наступающими Вас праздниками!
+
 					</p>
 				</div>
 		</div>
