fix data on infoblock

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
 	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -64,7 +64,7 @@
 						Уважаемые
 						посетители!<br>
 						23 февраля для бассейна - рабочий день.<br>
-						На период 7 и 8 марта бассейн работать не будет.<br>
+						На период <b>8</b> и <b>9</b> марта бассейн работать не будет.<br>
 						С наступающими Вас праздниками!
 
 					</p>
