--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@
 				</div>
 				<div class="content-about-text-data">
 					<p class="text">			
-						Уважаемые
-						посетители!<br>
-						23 февраля для бассейна - рабочий день.<br>
-						На период <b>8</b> и <b>9</b> марта бассейн работать не будет.<br>
+						Уважаемые посетители!<br>
+						Бассейн не работает 1 и 9 мая.<br>
+						В остальные же дни бассейн работает для всех желающих.<br>
 						С наступающими Вас праздниками!
-
 					</p>
 				</div>
 		</div>
