--- a/pricelist.html
+++ b/pricelist.html
@@ -111,47 +111,52 @@
 						<p>8</p>
 					</td>
 					<td>
-						<p>960,00</p>
+						<p>1160</p>
 					</td>
-					<td>
-						<p>-</p>
-					</td>
-					<td>
+					<td colspan="2">
 						<p>-</p>
 					</td>
 				</tr>
 				<tr>
-					<td rowspan="2" style="background-color:#f6fafd">
+					<td rowspan="3" style="background-color:#f6fafd">
 						<p>Семейное плавание (оздоровительное плавание для взрослых и детей)</p>
 					</td>
-					<td rowspan="2">
+					<td rowspan="3">
 						<p>1 час</p>
 					</td>
+					<td> 
+						<p>1</p>
+					</td>
+					<td>
+						<p>150</p>
+					</td>
 					<td>
 						<p>1</p>
 					</td>
 					<td>
-						<p>150,00</p>
+						<p>280</p>
+					</td>
+				</tr>
+				<tr>
+					<td  rowspan="2">
+						<p>4</p>
+					</td>
+					<td  rowspan="2">
+						<p>500</p>
+					</td>
+					<td >
+						<p>4</p>
 					</td>
 					<td>
-						<p>1</p>
-					</td>
-					<td>
-						<p>250,00</p>
+						<p>900</p>
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<p>4</p>
+						<p>4 до 17:00</p>
 					</td>
 					<td>
-						<p>480,00</p>
-					</td>
-					<td>
-						<p>4</p>
-					</td>
-					<td>
-						<p>800,00</p>
+						<p>800</p>
 					</td>
 				</tr>
 				<tr>
@@ -168,7 +173,7 @@
 						<p>1</p>
 					</td>
 					<td>
-						<p>250,00</p>
+						<p>250</p>
 					</td>
 				</tr>
 				<tr>
@@ -179,46 +184,45 @@
 						<p>1</p>
 					</td>
 					<td>
-						<p>350,00</p>
+						<p>350</p>
 					</td>
 				</tr>
 				<tr>
-					<td rowspan="2" style="background-color:#f6fafd">
+					<td rowspan="3" style="background-color:#f6fafd">
 						<p>Аквааэробика (групповые фитнес-программы)</p>
 					</td>
-					<td rowspan="2">
+					<td rowspan="3">
 						<p>1,5 часа</p>
 					</td>
-					<td>
-						<p>-</p>
-					</td>
-					<td>
+					<td colspan="2" rowspan="3">
 						<p>-</p>
 					</td>
 					<td>
 						<p>1</p>
 					</td>
 					<td>
-						<p>300,00</p>
+						<p>300</p>
 					</td>
 				</tr>
 				<tr>
-					<td>
-						<p>-</p>
-					</td>
-					<td>
-						<p>-</p>
-					</td>
 					<td>
 						<p>4</p>
 					</td>
 					<td>
-						<p>1 000,00</p>
+						<p>1 200</p>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<p>8</p>
+					</td>
+					<td>
+						<p>2 000</p>
 					</td>
 				</tr>
 				<tr>
 					<td rowspan="2" style="background-color:#f6fafd">
-						<p>Спортивно-оздоровительная секция для детей по водному поло</p>
+						<p>Спортивно-оздоровительная секция для детей школьного возраста по водному поло</p>
 					</td>
 					<td>
 						<p>1 академ. час</p>
@@ -227,12 +231,9 @@
 						<p>8</p>
 					</td>
 					<td rowspan="2">
-						<p>2 560</p>
+						<p>2 880</p>
 					</td>
-					<td rowspan="2">
-						<p>-</p>
-					</td>
-					<td rowspan="2">
+					<td rowspan="2" colspan="2">
 						<p>-</p>
 					</td>
 				</tr>
@@ -242,23 +243,37 @@
 					</td>
 				</tr>
 				<tr>
+					<td  style="background-color:#f6fafd">
+						<p>Спортивно-оздоровительная секция для детей дошкольного возраста по водному поло (6-7 лет)</p>
+					</td>
+					<td>
+						<p>1 академ. час</p>
+					</td>
+					<td >
+						<p>8</p>
+					</td>
+					<td>
+						<p>1 440</p>
+					</td>
+					<td colspan="2">
+						<p>-</p>
+					</td>
+				</tr>
+				<tr>
 					<td rowspan="2" style="background-color:#f6fafd">
 						<p>коллективное посещение группы (от организации, предприятия) оздоровительного плавания</p>
 					</td>
 					<td rowspan="2">
 						<p>1 час</p>
 					</td>
-					<td rowspan="2">
-						<p>-</p>
-					</td>
-					<td rowspan="2">
+					<td rowspan="2" colspan="2">
 						<p>-</p>
 					</td>
 					<td>
 						<p>1</p>
 					</td>
 					<td>
-						<p>4 500,00</p>
+						<p>5 000</p>
 					</td>
 				</tr>
 				<tr>
@@ -266,7 +281,7 @@
 						<p>4</p>
 					</td>
 					<td>
-						<p>18 000,00</p>
+						<p>20 000</p>
 					</td>
 				</tr>
 				<tr>
@@ -276,17 +291,14 @@
 					<td rowspan="2">
 						<p>1,5 часа</p>
 					</td>
-					<td rowspan="2">
-						<p>-</p>
-					</td>
-					<td rowspan="2">
+					<td rowspan="2" colspan="2">
 						<p>-</p>
 					</td>
 					<td>
 						<p>1</p>
 					</td>
 					<td>
-						<p>6 000,00</p>
+						<p>6 500</p>
 					</td>
 				</tr>
 				<tr>
@@ -294,7 +306,7 @@
 						<p>4</p>
 					</td>
 					<td>
-						<p>24 000,00</p>
+						<p>26 000</p>
 					</td>
 				</tr>
 				<tr>
