--- a/schedule.html
+++ b/schedule.html
@@ -62,6 +62,7 @@
 <p><strong>физкультурно-оздоровительных услуг в бассейне &laquo;Дельфин&raquo;</strong></p>
 <p><strong>&nbsp;БОУ г. Омска &laquo;Средняя общеобразовательная школа №55</strong></p>
 <p><strong>&nbsp;имени </strong><strong>Л.Я. Кичигиной и В.И. Кичигина</strong><strong>&raquo;</strong></p>
+<br>
 <ol>
 <li><strong>Группы спортивно-оздоровительного плавания для детей (с 6 лет)</strong></li>
 </ol>
@@ -80,13 +81,13 @@
 </tr>
 <tr>
 <td style="width:131px">
-<p><strong><em>Время</em></strong></p>
+<p><strong><em>время</em></strong></p>
 </td>
 <td style="width:163px">
 <p><strong><em>тренер</em></strong></p>
 </td>
 <td style="width:136px">
-<p><strong><em>Время</em></strong></p>
+<p><strong><em>время</em></strong></p>
 </td>
 <td style="width:172px">
 <p><strong><em>тренер</em></strong></p>
@@ -109,12 +110,10 @@
 <p>Тесля А.В.</p>
 </td>
 <td style="width:136px">
-<p>11.00-12.00</p>
 <p>16.00-17.00</p>
 <p>17.00-18.00</p>
 </td>
 <td style="width:172px">
-<p>Машкова Г.А.</p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
 </td>
@@ -126,10 +125,8 @@
 <td style="width:131px">
 <p>16.50-17.50</p>
 <p>18.00-19.00</p>
-<p>19.10-20.10</p>
 </td>
 <td style="width:163px">
-<p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 </td>
@@ -148,7 +145,7 @@
 <p>15.50-16.50</p>
 <p>17.00-18.00</p>
 <p>18.00-19.00</p>
-<p>19.10-20.10</p>
+<p>19.05-20.05</p>
 </td>
 <td style="width:163px">
 <p>Котомцева Д.В.</p>
@@ -157,12 +154,10 @@
 <p>Тесля А.В.</p>
 </td>
 <td style="width:136px">
-<p>11.00-12.00</p>
 <p>16.00-17.00</p>
 <p>17.00-18.00</p>
 </td>
 <td style="width:172px">
-<p>Машкова Г.А.</p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
 </td>
@@ -174,15 +169,13 @@
 <td style="width:131px">
 <p>16.50-17.50</p>
 <p>18.00-19.00</p>
-<p>19.10-20.10</p>
 </td>
 <td style="width:163px">
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
-<p>Котомцева Д.В.</p>
 </td>
 <td style="width:136px">
-<p>15.30-16.30</p>
+<p>15.40-16.40</p>
 </td>
 <td style="width:172px">
 <p>Котомцева Д.В.</p>
@@ -207,14 +200,12 @@
 <p>Котомцева Д.В.</p>
 </td>
 <td style="width:136px">
-<p>9.30-10.30</p>
 <p>11.45-12.45</p>
 <p>12.50-13.50</p>
 <p>15.00-16.00</p>
-<p>16.00-17.00</p>
+<p>16.10-17.10</p>
 </td>
 <td style="width:172px">
-<p>Котомцева Д.В.</p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
 <p>Котомцева Д.В.</p>
@@ -223,57 +214,8 @@
 </tr>
 </tbody>
 </table>
-<p></p>
-<p></p>
-<p></p>
+<br>
 <ol start="2">
-<li><strong>Группы спортивно-оздоровительного плавания </strong></li>
-</ol>
-<p><strong>для детей дошкольного возраста (с 5 лет). <em>&nbsp;Малая чаша</em></strong></p>
-<p></p>
-<table>
-<tbody>
-<tr>
-<td style="width:188px">
-<p><strong><em>День недели</em></strong></p>
-</td>
-<td style="width:273px">
-<p><strong><em>Время</em></strong></p>
-</td>
-<td style="width:307px">
-<p><strong><em>тренер</em></strong></p>
-</td>
-</tr>
-<tr>
-<td style="width:188px">
-<p><strong>Среда</strong></p>
-<p></p>
-</td>
-<td style="width:273px">
-<p>09.30-10.30</p>
-<p>11.00-12.00</p>
-</td>
-<td style="width:307px">
-<p>Машкова Г.А.</p>
-</td>
-</tr>
-<tr>
-<td style="width:188px">
-<p><strong>Пятница</strong></p>
-</td>
-<td style="width:273px">
-<p>09.30-10.30</p>
-<p>11.00-12.00</p>
-</td>
-<td style="width:307px">
-<p>Машкова Г.А.</p>
-</td>
-</tr>
-</tbody>
-</table>
-<p></p>
-<p></p>
-<ol start="3">
 <li><strong>Оздоровительное плавание &laquo;Мать и дитя&raquo; (совместное групповое занятие)</strong></li>
 </ol>
 <table>
@@ -335,134 +277,174 @@
 </tr>
 </tbody>
 </table>
-<ol start="4">
+<br>
+<ol start="3">
 <li><strong>Детская спортивно-оздоровительная секция &laquo;Водное поло&raquo;</strong></li>
 </ol>
-<table>
+<strong>Тренеры: Мухин Евгений Маратович, Котомцева Джиллиана Вячеславовна</strong>
+<table width="860">
 <tbody>
 <tr>
-<td style="width:165px">
-<p><strong><em>День недели</em></strong></p>
+<td width="222">
+<p><strong>День недели</strong></p>
 </td>
-<td style="width:146px">
-<p><strong><em>Время</em></strong></p>
+<td width="319">
+<p><strong>Время</strong></p>
 </td>
-<td style="width:200px">
-<p><strong><em>Место проведения</em></strong></p>
-</td>
-<td style="width:256px">
-<p><strong><em>тренер</em></strong></p>
+<td width="319">
+<p><strong>Группа</strong></p>
 </td>
 </tr>
 <tr>
-<td style="width:165px">
+<td width="222">
+<p><strong>Понедельник</strong></p>
+</td>
+<td width="319">
+<p>18.00 &ndash; 19.00</p>
+</td>
+<td width="319">
+<p><strong>прикладное плавание</strong></p>
+</td>
+</tr>
+<tr>
+<td rowspan="3" width="222">
 <p><strong>Вторник</strong></p>
 </td>
-<td style="width:146px">
-<p>9.00-10.00</p>
+<td width="319">
+<p>9.00 &ndash; 10.00</p>
 </td>
-<td style="width:200px">
-<p>спортзал/</p>
-<p>бассейн</p>
-</td>
-<td style="width:256px">
-<p>Мухин Е.М</p>
+<td width="319">
+<p><strong>прикладное плавание</strong></p>
 </td>
 </tr>
 <tr>
-<td style="width:165px">
+<td width="319">
+<p>18.00 &ndash; 19.00</p>
+</td>
+<td width="319">
+<p><strong>прикладное плавание</strong></p>
+</td>
+</tr>
+<tr>
+<td width="319">
+<p>19.15 &ndash; 20.15</p>
+</td>
+<td width="319">
+<p><strong><em>дошкольная</em></strong></p>
+<p>ОФП (сп/з)</p>
+</td>
+</tr>
+<tr>
+<td rowspan="2" width="222">
 <p><strong>Среда</strong></p>
 </td>
-<td style="width:146px">
-<p>16.00-17.00</p>
+<td width="319">
+<p>16.00 &ndash; 17.00</p>
 </td>
-<td style="width:200px">
-<p>спортзал/</p>
-<p>бассейн</p>
-</td>
-<td style="width:256px">
-<p>Мухин Е.М</p>
+<td width="319">
+<p><strong>прикладное плавание</strong></p>
 </td>
 </tr>
 <tr>
-<td style="width:165px">
+<td width="319">
+<p>19.15 &ndash; 20.15</p>
+</td>
+<td width="319">
+<p><strong><em>дошкольная </em></strong>(м/чаша)</p>
+</td>
+</tr>
+<tr>
+<td rowspan="2" width="222">
 <p><strong>Четверг</strong></p>
 </td>
-<td style="width:146px">
-<p>9.00-10.00</p>
-<p>18.00-19.00</p>
+<td width="319">
+<p>9.00 &ndash; 10.00</p>
 </td>
-<td style="width:200px">
-<p>спортзал/</p>
-<p>бассейн</p>
-</td>
-<td style="width:256px">
-<p>Мухин Е.М</p>
+<td width="319">
+<p><strong>прикладное плавание</strong></p>
 </td>
 </tr>
 <tr>
-<td rowspan="4" style="width:165px">
+<td width="319">
+<p>20.00 &ndash; 21.00</p>
+</td>
+<td width="319">
+<p><strong>прикладное плавание</strong></p>
+</td>
+</tr>
+<tr>
+<td rowspan="3" width="222">
+<p><strong>Пятница</strong></p>
+</td>
+<td width="319">
+<p>9.00 &ndash; 10.00</p>
+</td>
+<td width="319">
+<p><strong>прикладное плавание</strong></p>
+</td>
+</tr>
+<tr>
+<td width="319">
+<p>19.15 &ndash; 20.15</p>
+</td>
+<td width="319">
+<p><strong><em>дошкольная </em></strong>(м/чаша)</p>
+</td>
+</tr>
+<tr>
+<td width="319">
+<p>20.00 &ndash; 21.00</p>
+</td>
+<td width="319">
+<p><strong>прикладное плавание</strong></p>
+</td>
+</tr>
+<tr>
+<td rowspan="2" width="222">
 <p><strong>Суббота</strong></p>
 </td>
-<td style="width:146px">
-<p>16.00-17.00</p>
+<td width="319">
+<p>16.00 &ndash; 17.00 (спорт.зал)</p>
+<p>17.00 &ndash; 18.00 (вода)</p>
 </td>
-<td style="width:200px">
-<p>спортзал</p>
-</td>
-<td rowspan="4" style="width:256px">
-<p>Мухин Е.М.<br>Котомцева Д.В.</p>
+<td width="319">
+<p><strong>комплексная тренировка</strong></p>
 </td>
 </tr>
 <tr>
-<td style="width:146px">
-<p>17.00-18.00</p>
+<td width="319">
+<p>18.00 &ndash; 19.00 (спорт.зал)</p>
+<p>19.00 &ndash; 20.00 (вода)</p>
 </td>
-<td style="width:200px">
-<p>бассейн</p>
-</td>
-</tr>
-<tr>
-<td style="width:146px">
-<p>18.00-19.00</p>
-</td>
-<td style="width:200px">
-<p>спортзал</p>
+<td width="319">
+<p><strong>комплексная тренировка</strong></p>
 </td>
 </tr>
 <tr>
-<td style="width:146px">
-<p>19.00-20.00</p>
-</td>
-<td style="width:200px">
-<p>бассейн</p>
-</td>
-</tr>
-<tr>
-<td rowspan="2" style="width:165px">
+<td rowspan="2" width="222">
 <p><strong>Воскресенье</strong></p>
 </td>
-<td style="width:146px">
-<p>9.30-10.30</p>
+<td width="319">
+<p>8.30 &ndash; 9.30 (спорт.зал)</p>
+<p>10.30 &ndash; 11.30 (вода)</p>
 </td>
-<td style="width:200px">
-<p>спортзал</p>
-</td>
-<td rowspan="2" style="width:256px">
-<p>Мухин Е.М.</p>
+<td width="319">
+<p><strong>комплексная тренировка</strong><br>(младшая группа)</p>
 </td>
 </tr>
 <tr>
-<td style="width:146px">
-<p>10.30-11.30</p>
+<td width="319">
+<p>11.30 &ndash; 12.30 (вода)</p>
+<p>12.30 &ndash; 13.30 (спорт.зал)</p>
 </td>
-<td style="width:200px">
-<p>бассейн</p>
+<td width="319">
+<p><strong>комплексная тренировка</strong><br>(старшая группа)</p>
 </td>
 </tr>
 </tbody>
 </table>
-<ol start="5">
+<br>
+<ol start="4">
 <li><strong>Группы &laquo;Аква-аэробики&raquo; (фитнес-программы для взрослых старше 18 лет) </strong></li>
 </ol>
 <table>
@@ -505,7 +487,7 @@
 <p><strong>Пятница</strong></p>
 </td>
 <td style="width:256px">
-<p>19.00-20.30</p>
+<p>18.30-20.00</p>
 </td>
 <td style="width:256px">
 <p>Криницкая Т.А.</p>
@@ -513,7 +495,7 @@
 </tr>
 <tr>
 <td style="width:256px">
-<p><strong>Суббота (с октября)</strong></p>
+<p><strong>Суббота</strong></p>
 </td>
 <td style="width:256px">
 <p>10.30-12.00</p>
@@ -524,7 +506,8 @@
 </tr>
 </tbody>
 </table>
-<ol start="6">
+<br>
+<ol start="5">
 <li><strong>Семейное (свободное) плавание</strong></li>
 </ol>
 <table>
@@ -542,12 +525,13 @@
 <p><strong>Вторник</strong></p>
 </td>
 <td style="width:256px">
-<p>18.00-19.00</p>
+<p>12.00-13.00</p>
+<p>20.30-21.30</p>
 </td>
 </tr>
 <tr>
 <td style="width:256px">
-<p><strong>Пятница</strong></p>
+<p><strong>Четверг</strong></p>
 </td>
 <td style="width:256px">
 <p>18.00-19.00</p>
@@ -563,7 +547,7 @@
 </tr>
 <tr>
 <td style="width:256px">
-<p><strong>Воскресенье (с октября)</strong></p>
+<p><strong>Воскресенье</strong></p>
 </td>
 <td style="width:256px">
 <p>18.00-19.00</p>
